nullaway_error_109c5ee7-281a-41eb-8f0f-c9313f9917ce.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/Tile.java:167: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return this.tilesetEntry;
    ^
    (see http://t.uber.com/nullaway )
